--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 
 <head>
 <title> About Me </title>
-
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <style>
 
 body{
@@ -15,21 +15,22 @@ body{
 	text-align: center;
 	border-bottom: 2px solid;
 	border-bottom-color: crimson;
-	
-	
+
+
 }
 .description{
 	font-weight:bold;
 	border: 1px solid;
-	border-radius:10px;
-	
+	border-radius:18px;
+	margin-top:30px;
+
 }
 .classes{
-	border-radius:10px;
+	border-radius:18px;
 	border: 1px solid;
-	
+
 }
-.row{
+.para{
 	margin-top:20px;
 	padding:5px;
 }
@@ -48,7 +49,7 @@ body{
 	font-family:Century Gothic;
 	text-align:center;
 	font-weight:bold;
-	
+
 }
 .list-item{
 	text-align:center;
@@ -61,13 +62,13 @@ body{
 </head>
 
 <body>
-<div class="row"> 
+<div class="para" style="margin-top:20px;">
 	<h2 class="heading"> Piyush Kumar </h2>
-	
+
 </div>
 
-<div class="row"> 
-	
+<div class="para">
+
 	<div class="description">
 	<h3 class="sub-heading"> Description </h3>
 		<ul class="list">
@@ -78,8 +79,8 @@ body{
 	</div>
 
 </div>
-<div class="row"> 
-	
+<div class="para">
+
 	<div class="classes">
 		<h3 class="sub-heading"> Active Classes </h3>
 		<ul class="list">
@@ -89,23 +90,23 @@ body{
 		<li class="list-item">MATLAB Programming</li>
 		</ul>
 	</div>
-	
+
 
 </div>
-<div class="row"> 
+<div class="para">
 	<div class="classes">
 		<h3 class="sub-heading"> Favorite Movies </h3>
 		<ul class="list">
-		<li class="list-item">Harry Potter and The Chamber of Secrets <a href="https://www.imdb.com/title/tt0295297/?ref_=nv_sr_5?ref_=nv_sr_5"> <button class="btn btn-success"> Know More </button> </a> </li>
-		<li class="list-item">Harry Potter and The Order of Phoenix <a href="https://www.imdb.com/title/tt0373889/?ref_=fn_al_tt_1"> <button class="btn btn-success"> Know More </button> </a> </li>
-		<li class="list-item">Pacific Rim <a href="https://www.imdb.com/title/tt1663662/?ref_=nv_sr_1?ref_=nv_sr_1"> <button class="btn btn success"> Know More </button> </a> </li>
-		
+		<li class="list-item">Harry Potter and The Chamber of Secrets <a href="https://www.imdb.com/title/tt0295297/?ref_=nv_sr_5?ref_=nv_sr_5"> <button class="btn btn-warning"> Know More </button> </a> </li>
+		<li class="list-item">Harry Potter and The Order of Phoenix <a href="https://www.imdb.com/title/tt0373889/?ref_=fn_al_tt_1"> <button class="btn btn-warning"> Know More </button> </a> </li>
+		<li class="list-item">Pacific Rim <a href="https://www.imdb.com/title/tt1663662/?ref_=nv_sr_1?ref_=nv_sr_1"> <button class="btn btn-warning"> Know More </button> </a> </li>
+
 		</ul>
 	</div>
-	
+
 
 </div>
-<div class="row"> 
+<div class="para">
 	<div class="classes">
 		<h3 class="sub-heading"> My Moods </h3>
 		<table cellpadding="5" align="center">
@@ -118,9 +119,9 @@ body{
 		<td class="mood">  Sad </td>
 		</tr>
 		<table>
-		
+
 	</div>
-	
+
 
 </div>
 
