--- a/aboutme.html
+++ b/aboutme.html
@@ -5,16 +5,23 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <style>
 
-body{
+.complete{
 	margin-left:15%;
 	margin-right:15%;
+}
+
+body{
+	background-color:#042f4b;
+
+
 }
 
 .heading{
 	font-family:Century Gothic;
 	text-align: center;
-	border-bottom: 2px solid;
-	border-bottom-color: crimson;
+
+
+	background:color:white;
 
 
 }
@@ -23,12 +30,15 @@ body{
 	border: 1px solid;
 	border-radius:18px;
 	margin-top:30px;
+	width:100%;
+	background-color:white;
 
 }
 .classes{
 	border-radius:18px;
 	border: 1px solid;
-
+	width:100%;
+	background-color:white;
 }
 .para{
 	margin-top:20px;
@@ -57,17 +67,36 @@ body{
 	padding:3px;
 	font-family:Century Gothic;
 }
+.row{
+	width:100%;
+	margin-bottom:20px;
+
+
+}
+.col{
+	width: 50%;
+	margin-top:20px;
+	margin-bottom: 20px;
+
+
+}
+.col .classes{
+	height: 226px;
+	padding:5px;
+
+
+}
 </style>
 
 </head>
 
 <body>
-<div class="para" style="margin-top:20px;">
+<div class="complete" style="margin-top: 64px; "><div class="classes" style="margin-top:50px; border:none; width:20%; margin-left: 521px; padding:3px;">
 	<h2 class="heading"> Piyush Kumar </h2>
 
 </div>
 
-<div class="para">
+<div class="row">
 
 	<div class="description">
 	<h3 class="sub-heading"> Description </h3>
@@ -79,11 +108,12 @@ body{
 	</div>
 
 </div>
-<div class="para">
+<div class="row" style="background-color:#042f4b;">
+<div class="col">
 
 	<div class="classes">
 		<h3 class="sub-heading"> Active Classes </h3>
-		<ul class="list">
+		<ul class="list" style="">
 		<li class="list-item">Introduction to Java Programming</li>
 		<li class="list-item">CSS Frameworks</li>
 		<li class="list-item">Image Processing</li>
@@ -93,20 +123,31 @@ body{
 
 
 </div>
-<div class="para">
+<div class="col">
 	<div class="classes">
 		<h3 class="sub-heading"> Favorite Movies </h3>
-		<ul class="list">
-		<li class="list-item">Harry Potter and The Chamber of Secrets <a href="https://www.imdb.com/title/tt0295297/?ref_=nv_sr_5?ref_=nv_sr_5"> <button class="btn btn-warning"> Know More </button> </a> </li>
-		<li class="list-item">Harry Potter and The Order of Phoenix <a href="https://www.imdb.com/title/tt0373889/?ref_=fn_al_tt_1"> <button class="btn btn-warning"> Know More </button> </a> </li>
-		<li class="list-item">Pacific Rim <a href="https://www.imdb.com/title/tt1663662/?ref_=nv_sr_1?ref_=nv_sr_1"> <button class="btn btn-warning"> Know More </button> </a> </li>
+		<table align="center" cellpadding="3" style="">
+			<tr>
+				<td class="list-item">Harry Potter and The Chamber of Secrets </td>
+				<td class="list-item"> <a href="https://www.imdb.com/title/tt0295297/?ref_=nv_sr_5?ref_=nv_sr_5"> <button class="btn btn-warning"> Know More </button> </a></td>
+			</tr>
+			<tr>
+				<td class="list-item">Harry Potter and The Order of Phoenix </td>
+				<td class="list-item"> <a href="https://www.imdb.com/title/tt0373889/?ref_=fn_al_tt_1"> <button class="btn btn-warning"> Know More </button> </a></td>
+			</tr>
+			<tr>
+				<td class="list-item">Pacific Rim </td>
+				<td class="list-item"> <a href="https://www.imdb.com/title/tt1663662/?ref_=nv_sr_1?ref_=nv_sr_1"> <button class="btn btn-warning"> Know More </button> </a></td>
+			</tr>
 
-		</ul>
+		</table>
+
 	</div>
+</div>
 
 
 </div>
-<div class="para">
+<div class="row">
 	<div class="classes">
 		<h3 class="sub-heading"> My Moods </h3>
 		<table cellpadding="5" align="center">
@@ -124,7 +165,7 @@ body{
 
 
 </div>
-
+</div>
 
 
 </body>
