--- a/AboutMe - 30th July/aboutme.html
+++ b/AboutMe - 30th July/aboutme.html
@@ -2,7 +2,7 @@
 
 <head>
 <title> About Me </title>
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" >
 <style>
 
 .complete{
@@ -12,18 +12,14 @@
 
 body{
 	background-color:#042f4b;
-
-
 }
 
 .heading{
 	font-family:Century Gothic;
 	text-align: center;
-
-
+	border-bottom: :1px solid;
+	border-bottom-color: red;
 	background:color:white;
-
-
 }
 .description{
 	font-weight:bold;
@@ -32,7 +28,6 @@ body{
 	margin-top:30px;
 	width:100%;
 	background-color:white;
-
 }
 .classes{
 	border-radius:18px;
@@ -40,10 +35,7 @@ body{
 	width:100%;
 	background-color:white;
 }
-.para{
-	margin-top:20px;
-	padding:5px;
-}
+
 .sub-heading{
 	font-family:Century Gothic;
 	text-align:center;
@@ -70,43 +62,32 @@ body{
 .row{
 	width:100%;
 	margin-bottom:20px;
-
-
 }
 .col{
 	width: 50%;
 	margin-top:20px;
 	margin-bottom: 20px;
-
-
 }
 .col .classes{
-	height: 226px;
+	height: 22.442899702085402vh;
 	padding:5px;
-
-
 }
 </style>
 
 </head>
 
 <body>
-<div class="complete" style="margin-top: 64px; "><div class="classes" style="margin-top:50px; border:none; width:20%; margin-left: 526px; padding:3px;">
-	<h2 class="heading"> Piyush Kumar </h2>
-
-</div>
+<div class="complete" style="margin-top: 64px; ">
 
 <div class="row">
-
 	<div class="description">
-	<h3 class="sub-heading"> Description </h3>
+	<h2 class="heading" style="border-bottom: 1px solid red;"> Piyush Kumar </h2>
 		<ul class="list">
 		<li class= "list-item">Student at Amity University, Kolkata. </li>
 		<li class= "list-item"> Former Web Development Intern at Inland World Logistics Pvt. Ltd. </li>
 		<li class= "list-item">Web Developmemt Enthusiast. </li>
 		</ul>
 	</div>
-
 </div>
 <div class="row" style="background-color:#042f4b;">
 <div class="col">
@@ -152,8 +133,8 @@ body{
 		<h3 class="sub-heading"> My Moods </h3>
 		<table cellpadding="5" align="center">
 		<tr>
-		<td> <img class="image" src="happy.jpg"> </td>
-		<td> <img class="image" src="sad.png"> </td>
+		<td> <img class="image img-responsive" src="happy.jpg"> </td>
+		<td> <img class="image img-responsive" src="sad.png"> </td>
 		</tr>
 		<tr>
 		<td class="mood"> Happy</td>
@@ -162,8 +143,6 @@ body{
 		<table>
 
 	</div>
-
-
 </div>
 </div>
 
