--- a/05-08-2019/public_html/index.html
+++ b/05-08-2019/public_html/index.html
@@ -6,11 +6,52 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Assignment 2</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style/styleme.css" rel="stylesheet" type="text/css"/>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+        <style>
+            body{
+                background-color: #00a79d;
+            }
+            .my{
+                margin-top:20%;
+                margin-bottom:30px;
+                margin-left:33%;
+                margin-right:30%;
+            }
+            .heading{
+                background-color:white;
+                padding: 10px;
+                border-radius:15px;
+                border: 1px solid red;
+                margin-left: 31%;
+            }
+            .para{
+                background-color:white;
+                padding: 10px;
+                border-radius: 15px;
+                border: 1px solid red;
+            }
+            .row{
+                margin-top:25px;
+                
+            }
+        </style>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="my">
+        <div class="row">
+            <div class="heading">
+                <h2> CSS STYLING </h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="para">
+                <p>This page is styled by CSS. Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS describes how elements should be rendered on screen, on paper, in speech, or on other media</p>
+            </div>
+        </div>
+            </div>
     </body>
 </html>
