--- a/05-08-2019/public_html/index.html
+++ b/05-08-2019/public_html/index.html
@@ -12,44 +12,31 @@ and open the template in the editor.
         <link href="style/styleme.css" rel="stylesheet" type="text/css"/>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
         <style>
-            body{
-                background-color: #00a79d;
-            }
-            .my{
-                margin-top:20%;
-                margin-bottom:30px;
-                margin-left:33%;
-                margin-right:30%;
-            }
-            .heading{
-                background-color:white;
-                padding: 10px;
-                border-radius:15px;
-                border: 1px solid red;
-                margin-left: 31%;
-            }
-            .para{
-                background-color:white;
-                padding: 10px;
-                border-radius: 15px;
-                border: 1px solid red;
-            }
-            .row{
-                margin-top:25px;
-                
-            }
+        body{
+          background-color: #d7d1c9;
+        }
         </style>
     </head>
     <body>
         <div class="my">
         <div class="row">
             <div class="heading">
-                <h2> CSS STYLING </h2>
+              <h2 class="titletext"> CSS STYLING </h2>
             </div>
-        </div>
-        <div class="row">
             <div class="para">
-                <p>This page is styled by CSS. Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS describes how elements should be rendered on screen, on paper, in speech, or on other media</p>
+                <p>This page is styled by CSS.
+                  Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+
+  CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts. This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.
+
+  Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.
+
+  The name cascading comes from the specified priority scheme to determine which style rule applies if more than one rule matches a particular element. This cascading priority scheme is predictable.
+
+  The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media type (MIME type) text/css is registered for use with CSS by RFC 2318 (March 1998). The W3C operates a free CSS validation service for CSS documents.
+
+  In addition to HTML, other markup languages support the use of CSS including XHTML, plain XML, SVG, and XUL.
+                </p>
             </div>
         </div>
             </div>
