--- a/30-07-2019/public_html/index.html
+++ b/30-07-2019/public_html/index.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
 <title> About Me </title>
+<meta charset="UTF-8">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" >
 <style>
 
@@ -72,6 +74,12 @@ body{
 	height: 28.4429vh;
 	padding:5px;
 }
+
+table{
+	text-align:  center;
+	margin-left: auto;
+	margin-right: auto;
+}
 </style>
 
 </head>
@@ -107,18 +115,18 @@ body{
 <div class="col">
 	<div class="classes">
 		<h3 class="sub-heading"> Favorite Movies </h3>
-		<table align="center" cellpadding="3" style="">
+		<table   style="padding:3px;">
 			<tr>
 				<td class="list-item">Harry Potter and The Chamber of Secrets </td>
-				<td class="list-item"> <a href="https://www.imdb.com/title/tt0295297/?ref_=nv_sr_5?ref_=nv_sr_5"> <button class="btn btn-warning"> Know More </button> </a></td>
+				<td class="list-item"> <a href="https://www.imdb.com/title/tt0295297/?ref_=nv_sr_5?ref_=nv_sr_5"> <span class="btn btn-warning"> Know More </span> </a></td>
 			</tr>
 			<tr>
 				<td class="list-item">Harry Potter and The Order of Phoenix </td>
-				<td class="list-item"> <a href="https://www.imdb.com/title/tt0373889/?ref_=fn_al_tt_1"> <button class="btn btn-warning"> Know More </button> </a></td>
+				<td class="list-item"> <a href="https://www.imdb.com/title/tt0373889/?ref_=fn_al_tt_1"> <span class="btn btn-warning"> Know More </span> </a></td>
 			</tr>
 			<tr>
 				<td class="list-item">Pacific Rim </td>
-				<td class="list-item"> <a href="https://www.imdb.com/title/tt1663662/?ref_=nv_sr_1?ref_=nv_sr_1"> <button class="btn btn-warning"> Know More </button> </a></td>
+				<td class="list-item"> <a href="https://www.imdb.com/title/tt1663662/?ref_=nv_sr_1?ref_=nv_sr_1"> <span class="btn btn-warning"> Know More </span> </a></td>
 			</tr>
 
 		</table>
@@ -131,16 +139,16 @@ body{
 <div class="row">
 	<div class="classes">
 		<h3 class="sub-heading"> My Moods </h3>
-		<table cellpadding="5" align="center">
+		<table style="padding:5px;" >
 		<tr>
-		<td> <img class="image img-responsive" src="happy.jpg"> </td>
-		<td> <img class="image img-responsive" src="sad.png"> </td>
+		<td> <img class="image img-responsive" alt="happy-mood" src="happy.jpg"> </td>
+		<td> <img class="image img-responsive" alt="sad-mood" src="sad.png"> </td>
 		</tr>
 		<tr>
 		<td class="mood"> Happy</td>
 		<td class="mood">  Sad </td>
 		</tr>
-		<table>
+		</table>
 
 	</div>
 </div>
