--- a/09-09-2019/public_html/index.html
+++ b/09-09-2019/public_html/index.html
@@ -12,22 +12,29 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="css/style.css">
+        <style>
+            #desc{
+                margin-left:69px;
+                padding: 10px;
+            }
+        </style>
     </head>
     <body>
-        <div class="row">
+        <div class="main">
+            <div class="row">
             <div class="col">
-                <img class="img-fluid" id="logo" src="image/logo.jpg">
+                <img class="img-fluid" id="logo" src="image/logo.png">
             </div>
             <div class="col">
                 <h1> Food Blog </h1>
             </div>
             <div class="col">
-                <button class="btn btn-primary">Interests</button>
-                <button class="btn btn-primary">Language</button>
+                <button class="btn btn-danger">Interests</button>
+                <button class="btn btn-danger">Language</button>
             </div>
         </div>
          <div class="row">
-             <div id="desc" class="col">
+             <div id="desc" class="col-lg-4">
                  <p>
                      Veganism is becoming increasingly popular.
 
@@ -68,6 +75,16 @@ Veganism is currently defined as a way of living that attempts to exclude all fo
                          <img id="sec" src="image/4.jpg">
                      </div>
                  </div>
+                 <div class="categorybox">
+                       <div class="section">
+                         <img id="sec" src="image/5.jpg">
+                     </div>
+                 </div>
+                 <div class="categorybox">
+                       <div class="section">
+                         <img id="sec" src="image/6.jpg">
+                     </div>
+                 </div>
              </div>
         </div>
          <div class="row">
@@ -77,5 +94,7 @@ Veganism is currently defined as a way of living that attempts to exclude all fo
                 </h1>
              </div>-
         </div>
+        </div>
+        
     </body>
 </html>
